src/bufr_interface.h

/** @author Ronald McLaren
    @date 2022-08-08

    @brief Gets Table B scale, reference, and bits values. Wraps BUFRLIB "nemspecs".

    @param[in] file_unit - c_int: Fortran file unit for the open file
    @param[in] mnemonic - const char*: c str for mnemonic
    @param[in] mnemonic_idx - int: indicates specific mnemonic element (if repeated)
    @param[out] scale - int*: scale of element
    @param[out] reference - int*: reference of element
    @param[out] bits - int*: number of bits representing the element

*/
    void nemspecs_f(int file_unit,
                    const char* mnemonic,
                    int mnemonic_idx,
                    int* scale,
                    int* reference,
                    int* bits);
/** @author Ronald McLaren
    @date 2022-03-23

    @brief Get copy of the moda_tables ISC array.

    @param[out] data - int**: c style pointer to the ISC array
    @param[out] len - int: length of the array
*/
  void get_isc_f(int** data, int* len);
/** @author Ronald McLaren
    @date 2022-03-23

    @brief Get copy of the moda_tables LINK array.

    @param[out] data - int**: c style pointer to the ISC array
    @param[out] len - int: length of the array
*/
  void get_link_f(int** data, int* len);
/** @author Ronald McLaren
    @date 2022-03-23

    @brief Get copy of the moda_tables ITP array.

    @param[out] data - int**: c style pointer to the ITP array
    @param[out] len - int: length of the array
*/
  void get_itp_f(int** data, int* len);
/** @author Ronald McLaren
    @date 2022-03-23

    @brief Get copy of the moda_tables TYP array.

    @param[out] data - int**: c style pointer to the TYP array
    @param[out] len - int: length of the array
*/
  void get_typ_f(char** data, int* str_len, int* size);
/** @author Ronald McLaren
  @date 2022-03-23

  @brief Get copy of the moda_tables TAG array.

  @param[out] data - int**: c style pointer to the TAG array
  @param[out] len - int: length of the array
*/
  void get_tag_f(char** data, int* str_len, int* size);
/** @author Ronald McLaren
@date 2022-03-23

@brief Get copy of the moda_tables JMPB array.

@param[out] data - int**: c style pointer to the JMPB array
@param[out] len - int: length of the array
*/
  void get_jmpb_f(int** data, int* len);
  // Data
/** @author Ronald McLaren
@date 2022-03-23

@brief Get the bufr node idx for the start node of the subset.

@param[out] lun - int: pointer for the file stream
@param[out] startNode - int*: the start node of the subset
*/
  void get_inode_f(int lun, int* startNode);
/** @author Ronald McLaren
@date 2022-03-23

@brief Get the number of values in the current subset

@param[out] lun - int: pointer for the file stream
@param[out] startNode - int*: number of values in the subset
*/
  void get_nval_f(int lun, int* numNodes);
/** @author Ronald McLaren
@date 2022-03-23

@brief Get pointer to the moda_usrint VAL array.

@param[out] lun - int: pointer for the file stream
@param[out] data - double**: c style pointer to the VAL array
@param[out] len - int*: length of the array
*/
  void get_val_f(int lun, double** data, int* len);
/** @author Ronald McLaren
@date 2022-03-23

@brief Get pointer to the moda_usrint INV array.

@param[out] lun - int: pointer for the file stream
@param[out] data - int**: c style pointer to the INV array
@param[out] len - int*: length of the array
*/
  void get_inv_f(int lun, int** data, int* len);
/** @author Ronald McLaren
@date 2022-03-23x

@brief Deletes the copies of the moda_tables arrays.
*/
  void delete_table_data_f();