src/bufr_interface.f90


!>  @author Ronald McLaren
!>  @date 2022-08-08
!>
!>  @brief Gets Table B scale, reference, and bits values. Wraps BUFRLIB "nemspecs".
!>
!>  @param[in] file_unit - c_int: Fortran file unit for the open file
!>  @param[in] mnemonic - c_char: c str for mnemonic
!>  @param[in] mnemonic_idx - c_int: indicates specific mnemonic element (if repeated)
!>  @param[out] scale - c_int: scale of element
!>  @param[out] reference - c_int: reference of element
!>  @param[out] bits - c_int: number of bits representing the element
!>
subroutine nemspecs_c(file_unit, mnemonic, mnemonic_idx, scale, reference, bits) &
        bind(C, name='nemspecs_f')
  integer(c_int), value, intent(in) :: file_unit
  character(kind=c_char,len=1), intent(in) :: mnemonic(*)
  integer(c_int), value, intent(in) ::mnemonic_idx
  integer(c_int), intent(out) :: scale
  integer(c_int), intent(out) :: reference
  integer(c_int), intent(out) :: bits

  integer :: iret

  ! Get the scale, reference and bits
  call nemspecs( file_unit, c_f_string(mnemonic), mnemonic_idx, scale, reference, bits, iret)

  if (iret /= 0) then
    call bort("Failed calling nemspecs for " // c_f_string(mnemonic))
  end if
end subroutine nemspecs_c


!>  @author Ronald McLaren
!>  @date 2022-03-23
!>
!>  @brief Get copy of the moda_tables ISC array.
!>
!>  @param[out] isc_ptr - c_ptr: c style pointer to the ISC array
!>  @param[out] isc_size - c_int: length of the array
!>
subroutine get_isc_c(isc_ptr, isc_size) bind(C, name='get_isc_f')
  use moda_tables
  type(c_ptr), intent(inout) :: isc_ptr
  integer(c_int), intent(out) :: isc_size

  allocate(isc_f(ntab))
  isc_f(1:ntab) = isc(1:ntab)
  isc_size = size(isc_f)
  isc_ptr = c_loc(isc_f(1))
end subroutine get_isc_c


!>  @author Ronald McLaren
!>  @date 2022-03-23
!>
!>  @brief Get copy of the moda_tables LINK array.
!>
!>  @param[out] link_ptr - c_ptr: c style pointer to the LINK array
!>  @param[out] link_size - c_int: size of the LINK array
!>
subroutine get_link_c(link_ptr, link_size) bind(C, name='get_link_f')
  use moda_tables
  type(c_ptr), intent(inout) :: link_ptr
  integer(c_int), intent(out) :: link_size

  allocate(link_f(ntab))
  link_f(1:ntab) = link(1:ntab)
  link_size = size(link_f)
  link_ptr = c_loc(link_f(1))
end subroutine get_link_c


!>  @author Ronald McLaren
!>  @date 2022-03-23
!>
!>  @brief Get copy of the moda_tables ITP array.
!>
!>  @param[out] itp_ptr - c_ptr: c style pointer to the ITP array
!>  @param[out] itp_size - c_int: size of the ITP array
!>
subroutine get_itp_c(itp_ptr, itp_size) bind(C, name='get_itp_f')
  use moda_tables
  type(c_ptr), intent(inout) :: itp_ptr
  integer(c_int), intent(out) :: itp_size

  allocate(itp_f(ntab))
  itp_f(1:ntab) = itp(1:ntab)
  itp_size = size(itp_f)
  itp_ptr = c_loc(itp_f(1))
end subroutine get_itp_c


!>  @author Ronald McLaren
!>  @date 2022-03-23
!>
!>  @brief Get copy of the moda_tables TYP array.
!>
!>  @param[out] typ_ptr - c_ptr: c style pointer to the TYP array
!>  @param[out] typ_len - c_int: length of the TYP str
!>  @param[out] mem_size - c_int: length of the TYP array
!>
subroutine get_typ_c(typ_ptr, typ_len, mem_size) bind(C, name='get_typ_f')
  use moda_tables
  type(c_ptr), intent(inout) :: typ_ptr
  integer(c_int), intent(out) :: typ_len
  integer(c_int), intent(out) :: mem_size

  allocate(typ_f(ntab))
  typ_f(1:ntab) = typ(1:ntab)
  typ_len = len(typ(1))
  mem_size = size(typ_f)
  typ_ptr = c_loc(typ_f(1))
end subroutine get_typ_c


!>  @author Ronald McLaren
!>  @date 2022-03-23
!>
!>  @brief Get copy of the moda_tables TAG array.
!>
!>  @param[out] tag_ptr - c_ptr: c style pointer to the TAG array
!>  @param[out] tag_len - c_int: length of the tag string
!>  @param[out] mem_size - c_int: size of TAG array
!>
subroutine get_tag_c(tag_ptr, tag_len, mem_size) bind(C, name='get_tag_f')
  use moda_tables
  type(c_ptr), intent(inout) :: tag_ptr
  integer(c_int), intent(out) :: tag_len
  integer(c_int), intent(out) :: mem_size

  allocate(tag_f(ntab))
  tag_f(1:ntab) = tag(1:ntab)
  tag_len = len(tag(1))
  mem_size = size(tag_f)
  tag_ptr = c_loc(tag_f(1))
end subroutine get_tag_c


!>  @author Ronald McLaren
!>  @date 2022-03-23
!>
!>  @brief Get copy of the moda_tables JMPB array.
!>
!>  @param[out] jmpb_ptr - c_ptr: c style pointer to the JMPB array
!>  @param[out] jmpb_size - c_int: length of the array
!>
subroutine get_jmpb_c(jmpb_ptr, jmpb_size) bind(C, name='get_jmpb_f')
  use moda_tables
  type(c_ptr), intent(inout) :: jmpb_ptr
  integer(c_int), intent(out) :: jmpb_size

  allocate(jmpb_f(ntab))
  jmpb_f(1:ntab) = jmpb(1:ntab)
  jmpb_size = size(jmpb_f)
  jmpb_ptr = c_loc(jmpb_f(1))
end subroutine get_jmpb_c


!>  @author Ronald McLaren
!>  @date 2022-03-23
!>
!>  @brief Get the bufr node idx for the start node of the subset.
!>
!>  @param[out] lun - c_int: pointer for the file stream
!>  @param[out] start_node - c_int: the start node of the subset
!>
subroutine get_inode_c(lun, start_node) bind(C, name='get_inode_f')
  use moda_msgcwd
  integer(c_int), value, intent(in) :: lun
  integer(c_int), intent(out) :: start_node

  start_node = inode(lun)
end subroutine get_inode_c


!>  @author Ronald McLaren
!>  @date 2022-03-23
!>
!>  @brief Get the number of values in the current subset
!>
!>  @param[out] lun - c_int: pointer for the file stream
!>  @param[out] numNodes - c_int: number of values in the subset
!>
subroutine get_nval_c(lun, numNodes) bind(C, name='get_nval_f')
  use moda_usrint
  integer(c_int), value, intent(in) :: lun
  integer(c_int), intent(out) :: numNodes

  numNodes = nval(lun)
end subroutine get_nval_c


!>  @author Ronald McLaren
!>  @date 2022-03-23
!>
!>  @brief Get pointer to the moda_usrint VAL array.
!>
!>  @param[out] lun - c_int: pointer for the file stream
!>  @param[out] val_ptr - c_ptr: c style pointer to the VAL array
!>  @param[out] val_size - c_int: length of the array
!>
subroutine get_val_c(lun, val_ptr, val_size) bind(C, name='get_val_f')
  use moda_usrint
  integer(c_int), value, intent(in) :: lun
  type(c_ptr), intent(inout) :: val_ptr
  integer(c_int), intent(out) :: val_size

  val_size = size(val(:, lun))
  val_ptr = c_loc(val(1, lun))
end subroutine get_val_c


!>  @author Ronald McLaren
!>  @date 2022-03-23
!>
!>  @brief Get pointer to the moda_usrint INV array.
!>
!>  @param[out] lun - c_int: pointer for the file stream
!>  @param[out] inv_ptr - c_ptr: c style pointer to the INV array
!>  @param[out] inv_size - c_int: length of the array
!>
subroutine get_inv_c(lun, inv_ptr, inv_size) bind(C, name='get_inv_f')
  use moda_usrint
  integer(c_int), value, intent(in) :: lun
  type(c_ptr), intent(inout) :: inv_ptr
  integer(c_int), intent(out) :: inv_size

  inv_size = size(inv(:, lun))
  inv_ptr = c_loc(inv(1, lun))
end subroutine get_inv_c


!>  @author Ronald McLaren
!>  @date 2022-03-23
!>
!>  @brief Deletes the copies of the moda_tables arrays.
!>
subroutine delete_table_data_c() bind(C, name='delete_table_data_f')
  if (allocated(isc_f)) deallocate(isc_f)
  if (allocated(link_f)) deallocate(link_f)
  if (allocated(itp_f)) deallocate(itp_f)
  if (allocated(typ_f)) deallocate(typ_f)
  if (allocated(tag_f)) deallocate(tag_f)
  if (allocated(jmpb_f)) deallocate(jmpb_f)
end subroutine delete_table_data_c

end module bufr_c_interface_mod
